Fix overflow issue

--- a/website/css/donate-styles.css
+++ b/website/css/donate-styles.css
@@ -17,6 +17,11 @@ html {
   font-family: "Times New Roman", Times, serif;
 }
 
+/* Configure website body */
+body {
+  overflow-x: hidden;
+}
+
 /* Configure header elements and classes */
 .header {
   background-color: white;
